--- a/app/Src/FormExcelData.fx.yaml
+++ b/app/Src/FormExcelData.fx.yaml
@@ -1,5 +1,7 @@
 FormExcelData As screen:
-    OnVisible: =ResetForm(TestListForm);
+    OnVisible: |-
+        =ResetForm(TestListForm);
+        If(!IsBlank(varTestListItem), EditForm(TestListForm));
 
     TestListForm As form:
         DataSource: =TestList
@@ -7,9 +9,9 @@ FormExcelData As screen:
         Height: =439
         Item: =LookUp(TestList, RoleID = varTestListItem.RoleID)
         NumberOfColumns: =2
-        Width: =1275
+        Width: =Parent.Width - 80
         X: =40
-        Y: =40
+        Y: =120
         ZIndex: =1
 
         Title_DataCard4 As typedDataCard.textualEditCard:
@@ -568,6 +570,7 @@ FormExcelData As screen:
 
     Button9 As button:
         Fill: =RGBA(255, 0, 0, 1)
+        HoverFill: =ColorFade(Self.BorderColor, 20%)
         OnSelect: |-
             =Set(varTestListItem, Blank());
             Navigate(ImportExcelData);
@@ -575,4 +578,13 @@ FormExcelData As screen:
         X: =891
         Y: =616
         ZIndex: =3
+
+    Label9 As label:
+        FontWeight: =FontWeight.Semibold
+        Size: =23
+        Text: =If(IsBlank(varTestListItem), "Create new item", "Edit " & varTestListItem.Title)
+        Width: =Parent.Width - 160
+        X: =70
+        Y: =60
+        ZIndex: =4
 
