--- a/app/Src/EditTemplate.fx.yaml
+++ b/app/Src/EditTemplate.fx.yaml
@@ -33,7 +33,7 @@ EditTemplate As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: =Parent.DisplayName
-                Width: =(Parent.Width - 60) * 0.4
+                Width: =80
                 Wrap: =false
                 X: =30
                 Y: =10 + (DataCardValue15.Height / 2) - (Self.Height / 2)
@@ -101,7 +101,7 @@ EditTemplate As screen:
                 AutoHeight: =true
                 Height: =34
                 Text: ="Editor"
-                Width: =(Parent.Width - 60) * 0.4
+                Width: =80
                 Wrap: =false
                 X: =30
                 Y: =10 + (RichTextEditor3.Height / 2) - (Self.Height / 2)
