--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -111,10 +111,10 @@
   },
   "ScreenOrder": [
     "CampaignScreen",
-    "BrowseScreen1",
-    "EditScreen1",
-    "EditTemplate",
-    "NewScreen1",
+    "TemplatesScreen",
+    "EditCampaignScreen",
+    "EditTemplateScreen",
+    "CreateNewScreen",
     "PreviewCampaign",
     "PreviewTemplate",
     "SendOutScreen",
